--- a/Lab4 HTML practice.html
+++ b/Lab4 HTML practice.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <title>Practice</title>
+       <title>E2stem</title>
     </head>
     <body>
-        <p>this is my first website</p>
-        <h1>Welcome to cambodia</h1>
-        <h2>welcome to cambodia2</h2>
-        <h3>welcome to cambodia</h3> 
+     <marquee style="background-color:pink; padding: 30px;">Welcome to E2stem Education Cambodia</marquee>
+     <img src="../Lab4/e2stem-logo.png">
+     <h1 style="padding:right">Transforming Cambodia Through E2STEM Education</h1>
+     <center><img src="../Lab4/together.jpg"></center>
+     <h2>What is E2stem?</h2>
+     <img src="../Lab4/e2stem-graphic.png">
+     <p></p>
+
+
+       
 
     </body>
 </html>
