--- a/Lab4 HTML practice.html
+++ b/Lab4 HTML practice.html
@@ -10,7 +10,16 @@
      <center><img src="../Lab4/together.jpg"></center>
      <h2>What is E2stem?</h2>
      <img src="../Lab4/e2stem-graphic.png">
-     <p></p>
+     <h2 style="text-align:right;">Our Vision, Mission and Core Values</h2>
+     <table>
+        <tr>
+            <td>Cambodia needs young talents in STEM (Science, Technology, Engineering, Mathematics) with competencies in the 21st century skills in its journey towards becoming an upper-middle income nation.
+
+                Our Vision, Mission and Core Values guide us on this journey.
+                
+                </td>
+        </tr>
+     </table>
 
 
        
