--- a/Lab4 HTML practice.html
+++ b/Lab4 HTML practice.html
@@ -3,6 +3,7 @@
     <head>
        <title>E2stem</title>
     </head>
+    <link type="text/css" rel="stylesheet" href="../Lab4/web.css">
     <body>
      <marquee style="background-color:pink; padding: 30px;">Welcome to E2stem Education Cambodia</marquee>
      <img src="../Lab4/e2stem-logo.png">
