--- a/practice.html
+++ b/practice.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
     <style>
       .box{
         width:300px ; 
@@ -14,9 +13,15 @@
         background-color: brown;
       }
       body{
+        background-attachment: fixed;
+        background-repeat: no-repreat;
         background-image: url(../Lab4/e2stem-logo.png);
       }
     </style>
+<body>
+    <div class="box">
+
+    </div>
     
 </body>
 </html>
