--- a/practice.html
+++ b/practice.html
@@ -4,24 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-    <style>
-      .box{
-        width:300px ; 
-        height :300px;
-        background-color: brown;
-      }
-      body{
-        background-attachment: fixed;
-        background-repeat: no-repreat;
-        background-image: url(../Lab4/e2stem-logo.png);
-      }
-    </style>
+    <title>Practice day with css</title>
+    <link rel="stylesheet" href="../Lab4/web.css">
+</head>    
 <body>
-    <div class="box">
-
-    </div>
+    <h1 class="title">Welcome to this page</h1>
+    <p class="paragraph">Battambang is a city on the Sangkae River in northwestern Cambodia. It’s known for colonial buildings such as Sala Khaet, the former Governor’s Residence. Battambang Provincial Museum has artifacts from local Khmer temples.<br> Nearby, Phare Ponleu Selpak is a circus and performing arts school for underprivileged children. North of the center are the ruins of Ek Phnom, an 11th-century pagoda with sandstone carvings.</p>
+    <img src="../2020-04-24.jpg">
     
 </body>
 </html>
