--- a/practice.html
+++ b/practice.html
@@ -11,7 +11,15 @@
     <h1 class="title">Welcome to this page</h1>
     <p class="paragraph">Battambang is a city on the Sangkae River in northwestern Cambodia. It’s known for colonial buildings such as Sala Khaet, the former Governor’s Residence. Battambang Provincial Museum has artifacts from local Khmer temples.<br> Nearby, Phare Ponleu Selpak is a circus and performing arts school for underprivileged children. North of the center are the ruins of Ek Phnom, an 11th-century pagoda with sandstone carvings.</p>
     <img src="https://img.freepik.com/free-vector/tropical-landscape-with-sunset-ocean_107791-1667.jpg?w=2000" class="img">
-    
+    <ul>
+        <li>Love yourself</li>
+        <li>Love your familyL</li>
+        <li>Love your studyf</li>
+        <li>Love yourlife</li>
+    </ul>
+    <label>your email</label>
+    <input type="email">
+    <a href="./Lab4 HTML practice.html"><button>Enter next page</button></a>
     
 </body>
 </html>
