--- a/E2stemPage.html
+++ b/E2stemPage.html
@@ -13,13 +13,14 @@
     <img src="https://img.freepik.com/free-vector/tropical-landscape-with-sunset-ocean_107791-1667.jpg?w=2000" class="img">
     <ul>
         <li>Love yourself</li>
-        <li>Love your familyL</li>
-        <li>Love your studyf</li>
+        <li>Love your family</li>
+        <li>Love your study</li>
         <li>Love yourlife</li>
     </ul>
     <label>your email</label>
     <input type="email">
-    <a href="./Lab4 HTML practice.html"><button>Enter next page</button></a>
+    <br>
+    <br><a class="button" href="./Lab4 HTML practice.html"><button>Enter next page</button></a>
     
 </body>
 </html>
