--- a/E2stemPage.html
+++ b/E2stemPage.html
@@ -21,6 +21,7 @@
     <input type="email">
     <br>
     <br><a class="button" href="./Lab4 HTML practice.html"><button>Enter next page</button></a>
-    
+    <button class="join">Join us </button> 
+    <button class="FB">Tweet</button>
 </body>
 </html>
