--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,9 @@
 </head>    
 <body>
     <h1 class="title">Welcome to this page</h1>
-    <p class="paragraph">Battambang is a city on the Sangkae River in northwestern Cambodia. It’s known for colonial buildings such as Sala Khaet, the former Governor’s Residence. Battambang Provincial Museum has artifacts from local Khmer temples.<br> Nearby, Phare Ponleu Selpak is a circus and performing arts school for underprivileged children. North of the center are the ruins of Ek Phnom, an 11th-century pagoda with sandstone carvings.</p>
+    <p>Battambang is a city on the Sangkae River in northwestern Cambodia. It is known for colonial buildings such as Sala Khaet, the former Governor is Residence. Battambang Provincial Museum has artifacts from local Khmer temples.<br> Nearby, Phare Ponleu Selpak is a circus and performing arts school for underprivileged children. North of the center are the ruins of Ek Phnom, an 11th-century pagoda with sandstone carvings.</p>
     <img src="https://img.freepik.com/free-vector/tropical-landscape-with-sunset-ocean_107791-1667.jpg?w=2000" class="img">
+   
     <ul>
         <li>Love yourself</li>
         <li>Love your family</li>
@@ -20,8 +21,10 @@
     <label>your email</label>
     <input type="email">
     <br>
-    <br><a class="button" href="./Lab4 HTML practice.html"><button>Enter next page</button></a>
-    <button class="join">Join us </button> 
-    <button class="FB">Tweet</button>
+    <br><a  href="E2stempage1.html"><button class="button">Enter next page</button></a>
+    <a  href="https://www.facebook.com/hannahhhh1603"><button class="contact">FB </button></a>
+    <a href="https://twitter.com/NoHannah4"><button class="FB">Tweet</button></a>
+    <br>
+    <img class="img2" src="../2020-04-24.png">
 </body>
 </html>
