--- a/Index.html
+++ b/Index.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="../Lab4/web.css">
 </head>    
 <body>
-    <h1 class="title">Welcome to this page</h1>
-    <p>Battambang is a city on the Sangkae River in northwestern Cambodia. It is known for colonial buildings such as Sala Khaet, the former Governor is Residence. Battambang Provincial Museum has artifacts from local Khmer temples.<br> Nearby, Phare Ponleu Selpak is a circus and performing arts school for underprivileged children. North of the center are the ruins of Ek Phnom, an 11th-century pagoda with sandstone carvings.</p>
-    <img src="https://img.freepik.com/free-vector/tropical-landscape-with-sunset-ocean_107791-1667.jpg?w=2000" class="img">
+    <center><h1 class="title">Welcome to My Website</h1></center>
+    <img src="msg738328756-38077.jpg" class="img">
+    <p class="p1">My name is Hannah and I've recently graduated from High School on  28th December 2021.  I obtained an overall  Grade C in the recent National Grade 12 Bac II exams.
+        It's been a long journey to decide which major that I could study and finally I decided to join the Higher Diploma in Software Development at E2STEM and major in Bachelor of Information Technology Engineering at Royal University of Phnom Penh. It's an opportunity that I could join and study at E2STEM for 2 more years as a Higher Diploma Software Developer. Because of the sponsor who supports me at E2STEM, I have this great opportunity to pursue further studies.
+        It will be another challenge and a new thing for me to enter University for the first time. It's been 3 weeks since I first attended the Higher Diploma in Software Development programme at E2STEM. There are many interesting things that I have to explore and research more about. In the future, I want to have a good job and I want to help Cambodia to develop in the Education Field with Technology and introduce it to the students in rural areas. I want them to have the same opportunity as me to know what Technology is, what's Computer and 21st Century Skills. 
+        I try hard with my studies from high school until university and to become a valuable human resource for Cambodia and help other students by supporting them who don't have opportunity to study and know about 21st century skills.
+
+    </p>
    
+   <h2>1. Life and Journey</h2>
     <ul>
         <li>Love yourself</li>
         <li>Love your family</li>
