--- a/Index.html
+++ b/Index.html
@@ -19,10 +19,33 @@
    
    <h2>1. Life and Journey</h2>
     <ul>
-        <li>Love yourself</li>
-        <li>Love your family</li>
-        <li>Love your study</li>
-        <li>Love yourlife</li>
+        <br><li>Dorm Reflection</li>
+        <br>
+        <a href="https://docs.google.com/document/d/1ixVeJGfBPAaOtgHZRssJEQJIh0aNTAA2rLMDqJekAl0/edit"><button class="button1">Read my life Journey in dorm</button></a>
+        <br>
+        <li>School  and life Journey</li>
+        <p>3 years at e2stem with a good memory , let's read what I have been change at E2stem</p>
+        <a href="https://docs.google.com/document/d/1porcfRVUo66eXW46A6oByIUp97NyI9838U_p8_SFKDA/edit"><button class="button1">Read More</button></a>
+        <br><li>Life to make a change</li>
+        <br><a href="https://docs.google.com/document/d/1uMd7oBCFQ3RgbMHLj6pvCjrN32aGgVxdMJlEqSaxrSg/edit"><button class="button1">Life in 2018</button></a>
+        <a href="https://docs.google.com/document/d/1HNmf0QQGE8YRXFXe2aLA6cZ7qmwPrmCwiQAxszqOv5I/edit"><button class="button1">Life in 2019</button></a>
+        <a href="https://docs.google.com/document/d/1blQ99HCisLvLemDpYLx2NDRZatomo1iV4COzA2y7aY4/edit"><button class="button1">Life in 2020</button></a>
+        <a href="https://docs.google.com/document/d/1WvaqOebc7NPUou-3S9KXf8gCYqh9TNRXtU_v4nsp7Qo/edit#"><button class="button1">Life in 2020-2021</button></a>
+        <br><li>Check my Cover letter</li>
+        <br><a href="https://www.canva.com/design/DAE67ymBuz8/qAjbuKUgvRs8mk5xP2m-vA/edit?utm_content=DAE67ymBuz8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><button class="button1">Cover letter</button></a>
+    </ul>
+    <h3>School Academic</h3>
+    <a href="https://drive.google.com/drive/folders/1s3bY_0IvIj0Si7y7lw29VALF7n8iwp5q?ths=true">Report Card in Highschool</a>
+    <h2>2.The Project that I have done</h2>
+    <ul>
+        <li>Grade 10</li>
+        <a href="https://docs.google.com/document/d/11JEbE8IO5gxVwMtGRa3ESSnO9s6xeMW6YUL9cmgufUI/edit">Technovation Competition</a>
+
+        <li>Grade 11</li>
+        <a href="https://drive.google.com/drive/folders/1Czx6zRvBdquasq5RlpSsCI9r2r-FKpX6?ths=true">Sammary lesson grade 11</a>
+        <li>Grade 12</li>
+        <a href="https://docs.google.com/document/d/1dZzq-vUBfL1_IiLoQGYU1YTlpIeemw2rhyUbi0APPcI/edit">Green Lady Cambodia Product Project</a>
+        <li>Grade 10</li>
     </ul>
     <label>your email</label>
     <input type="email">
