--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="../Lab4/web.css">
 </head>    
 <body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="CV.html">Cover Letter</a>
+        <a href="Uni.html">University</a>
+        <a href="#about">About</a>
+    </div>
+
     <center><h1 class="title">Welcome to My Website</h1></center>
     <img src="msg738328756-38077.jpg" class="img">
     <p class="p1">My name is Hannah and I've recently graduated from High School on  28th December 2021.  I obtained an overall  Grade C in the recent National Grade 12 Bac II exams.
@@ -31,8 +38,7 @@
         <a href="https://docs.google.com/document/d/1HNmf0QQGE8YRXFXe2aLA6cZ7qmwPrmCwiQAxszqOv5I/edit"><button class="button1">Life in 2019</button></a>
         <a href="https://docs.google.com/document/d/1blQ99HCisLvLemDpYLx2NDRZatomo1iV4COzA2y7aY4/edit"><button class="button1">Life in 2020</button></a>
         <a href="https://docs.google.com/document/d/1WvaqOebc7NPUou-3S9KXf8gCYqh9TNRXtU_v4nsp7Qo/edit#"><button class="button1">Life in 2020-2021</button></a>
-        <br><li>Check my Cover letter</li>
-        <br><a href="https://www.canva.com/design/DAE67ymBuz8/qAjbuKUgvRs8mk5xP2m-vA/edit?utm_content=DAE67ymBuz8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"><button class="button1">Cover letter</button></a>
+        
     </ul>
     <h3>School Academic</h3>
     <a href="https://drive.google.com/drive/folders/1s3bY_0IvIj0Si7y7lw29VALF7n8iwp5q?ths=true">Report Card in Highschool</a>
