--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         <a class="active" href="#home">Home</a>
         <a href="CV.html">Cover Letter</a>
         <a href="Uni.html">University</a>
-        <a href="#about">About</a>
+        <a href="network.html">Network</a>
     </div>
 
     <center><h1 class="title">Welcome to My Website</h1></center>
